test/trivial/bradc/initvarsamename.good
initvarsamename.chpl:4: error: 'x' is used to define itself
